# probabilit

./: README.md  pyproject.toml
.github/workflows/: python.yml
src/probabilit/: __init__.py  correlation.py  distributions.py  garbage_collector.py  iman_conover.py  inspection.py  modeling.py  utils.py
tests/: test_correlation.py  test_distributions.py  test_garbage_collector.py  test_iman_conover.py  test_modeling.py  test_permutation_correlator.py
